# vrc-ec-json-exporter

./: .gitignore  README.md  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
src/: exportJsonFile.ts  export_json_file.py  extract_form_ids.py  getGoogleForm.ts  get_google_form.py  main.py  parseOutputHtml.ts  parse_output_html.py  saveHtml.ts  save_html.py
tests/: __init__.py  test_extract_form_ids.py
