[project]
name = "vrc-ec-json-exporter"
version = "0.1.0"
description = "Export VRC event calendar data to JSON"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
